--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Viewport cố định 800px giúp hiển thị giống desktop trên mọi thiết bị -->
+  <meta name="viewport" content="width=800">
   <title>Senior Memories</title>
   <!-- Import font Pacifico cho caption -->
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -21,8 +22,9 @@
       min-height: 100vh;
     }
 
+    /* Container được cố định chiều rộng 800px */
     .container {
-      max-width: 800px;
+      width: 800px;
       margin: 0 auto;
       animation: fadeIn 1.5s ease-in;
     }
@@ -57,7 +59,7 @@
       background: rgba(255, 255, 255, 0.9);
       border-radius: 15px;
       padding: 30px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
       margin: 20px 0;
       transform-style: preserve-3d;
       transition: transform 0.3s;
@@ -102,7 +104,7 @@
       transition: all 0.3s;
       display: block;
       margin: 20px auto;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     }
 
     .join-button:hover {
@@ -159,7 +161,9 @@
         Senior Memories<br>
         Thiệp mời chụp kỉ yếu cùng&nbsp;<span class="nowrap">Kass!</span>
       </h1>
-      <p class="handwrite-caption animate-on-scroll">Hãy sống trọn vẹn, chụp từng khoảnh khắc!</p>
+      <p class="handwrite-caption animate-on-scroll">
+        Hãy sống trọn vẹn, chụp từng khoảnh khắc!
+      </p>
     </div>
 
     <div class="invitation-card animate-on-scroll">
